Release 0.11:
- add ppx_xtmpl: this preprocessor creates functions from template
  files or strings, with the parameters described in the template.
  Usage: let doc = [%xtmpl "file.xml"]
         let doc = [%xtmpl.string {| <div>...</div> |} ]
- some functions renamed (deprecating original ones functions)
- add Xtmpl.node, Xtmpl.cdata
- new Xtmpl_xhtml module, with convenient functions to create Xhtml trees
- new package Xtmpl.js, with a Xtmpl_js module

Release 0.10:
  - use safe-string mode
  - new parameter ~xml_atts for Xtmpl.string_of_{xml,xmls,xml_atts}
    to indicate whether or not to keep valid XML in attributes when
    printing an XML tree. Default is true, to be backward-compatible.
    When it is true, Xtmpl tries to unescape some entities. Only
    lt, gt, amp, quot and apos named entities are unescaped.
    When an entity is given by its character code, only the ones
    with code between 0 and 255 are unescaped.

Release 0.9:
  - Add Xtmpl.merge_cdata
  - Add Xtmpl.merge_cdata_list

Release 0.8:
  - API change: attributes are now associated to xml tree list instead
    of string, for performance reason
  - new "protect_" attribute, to remove from environment the rules
    in this attribute. For example: <foo protect_="title,id" ...>...</foo>
    will prevent applying <title> and <id> rules in the node's children.
  - the rewrite is now done as a fold, taking a data in parameter and
    returning it.
  - defer_ attribute is now handled only for nodes having a
    matching rule in the environment.

Release 0.7:
  - re-introduce (un)escaping ampersands in attributes, when
    the attribute name is specified in attribute escamp_

Release 0.6:
  - do not (un)escape ampersand in attributes
  - fix META version
  - generate and install .cmxs file

Release 0.5:
  - mod: do not use string representation to check for changes in
    fixpoint computation
  - API change: Xtmpl.E of tag * atts * subs
  - API change: No more Xtmpl.T constructor